--- a/TestApp/Components/Pages/Home.razor
+++ b/TestApp/Components/Pages/Home.razor
@@ -7,29 +7,11 @@
 <h1>Drawflow Blazor Wrapper Demo</h1>
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#nodeEditorModal">
     Launch demo modal
 </button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-
+<NodeEditorModal BackingMethod="@(typeof(BaseNodeCollection).GetMethods().First(x => x.Name == "If"))"></NodeEditorModal>
 
 <div style="display:flex;;flex-direction: row;">
     <div style="display:flex;margin-bottom:5px;flex-direction: column;margin-right: 8px;width: 350px;">
@@ -40,27 +22,6 @@
             <button class="btn btn-sm btn-primary" @onclick="@(() => _base?.CreateInternalGraph().ConfigureAwait(false))">Run</button>
         </div>
         <div style="display: flex;gap: 5px;overflow:auto;flex-direction: column;height:80vh" class="controls">
-            @foreach (var nodeGroup in _functionNodes.GroupBy(x => x.Section))
-            {
-                <div class="accordion" id="accordion-@nodeGroup.FirstOrDefault()?.Section.GetHashCode()">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading-@nodeGroup.FirstOrDefault()?.Section.GetHashCode()">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-@nodeGroup.FirstOrDefault()?.Section.GetHashCode()" aria-expanded="true" aria-controls="collapse-@nodeGroup.FirstOrDefault()?.Section.GetHashCode()">
-                                @nodeGroup.FirstOrDefault()?.Section
-                            </button>
-                        </h2>
-                        <div id="collapse-@nodeGroup.FirstOrDefault()?.Section.GetHashCode()" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordion-@nodeGroup.FirstOrDefault()?.Section.GetHashCode()">
-                            <div class="accordion-body" style="display: flex;flex-wrap: wrap;gap: 5px;">
-                                @foreach (var node in nodeGroup)
-                                {
-                                    <button class="btn btn-sm btn-primary" @onclick="(() => CreateNode(node))">@node.Name</button>
-                                }
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-
 
         </div>
     </div>
@@ -70,8 +31,6 @@
               Options="@options"
               OnEvent="HandleEvent" />
 </div>
-
-
 
 @if (!string.IsNullOrWhiteSpace(_exportJson))
 {
